# django_chat

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: db.sqlite3
src/chat/: asgi.py  settings.py  urls.py
src/core/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/templates/core/: login.html  room.html  subject_list.html
